[tool.poetry]
name = "blockperf"
version = "2.0.1"
description = "Cardano blockperf.sh rewritten python"
license = "MIT"
readme = "README.md"
keywords = ["cardano", "poetry", "development", "blockperf", "spo"]

authors = ["Manuel Schmidt <manuel.schmidt@cardanofoundation.org>"]
maintainers = ["Manuel Schmidt <manuel.schmidt@cardanofoundation.org>"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

homepage = "https://github.com/cardano-foundation/blockperf"
repository = "https://github.com/cardano-foundation/blockperf"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "1.6.1"
psutil = "5.9.6"

[tool.poetry.group.dev.dependencies]
check-manifest = "^0.49"
coverage = "^7.4.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^23.12.1"
mypy = "^1.8.0"

[tool.poetry.scripts]
blockperf = "blockperf.cli:main"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/cardano-foundation/blockperf/issues"
"Source" = "https://github.com/cardano-foundation/blockperf/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
